cmake_minimum_required (VERSION 2.6)

PROJECT (Utils_src)

MESSAGE(STATUS "Cmake src...")

include( ${CMAKE_SOURCE_DIR}/project.cmake )

ADD_DEFINITIONS( -DENABLE_TESTCASE )

AUX_SOURCE_DIRECTORY(debug SRC_LIST)
AUX_SOURCE_DIRECTORY(asset SRC_LIST)
AUX_SOURCE_DIRECTORY(cache SRC_LIST)
AUX_SOURCE_DIRECTORY(container SRC_LIST)
AUX_SOURCE_DIRECTORY(memory SRC_LIST)
AUX_SOURCE_DIRECTORY(net SRC_LIST)
AUX_SOURCE_DIRECTORY(scope SRC_LIST)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_LIBRARY ( Utils ${SRC_LIST})